week2, day1, final commit

--- a/week2.ipynb
+++ b/week2.ipynb
@@ -266,6 +266,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# multiplying function\n",
+    "\n",
+    "def multiply(x, y):\n",
+    "    multiplication = x * y\n",
+    "    return multiplication\n",
+    "\n",
+    "print(multiply(3, 4)) # multiplication of 3 and 4"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
