week2, day2 commit

--- a/week2.ipynb
+++ b/week2.ipynb
@@ -288,43 +288,290 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "'def' defining function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   No First Name Last Name  Gender Start Date  Years          Department  \\\n",
-      "0   1     Ghadir     Hmshw    Male   4/4/2018      6     Quality Control   \n",
-      "1   2       Omar    Hishan    Male  5/21/2020      4     Quality Control   \n",
-      "2   3      Ailya    Sharaf  Female  9/28/2017      7  Major Mfg Projects   \n",
-      "3   4       Lwiy     Qbany    Male  8/14/2018      6       Manufacturing   \n",
-      "4   5      Ahmad     Bikri    Male  3/11/2020      4       Manufacturing   \n",
-      "\n",
-      "                Country Center  Monthly Salary  Annual Salary  Job Rate  \\\n",
-      "0                 Egypt   West            1560          18720       3.0   \n",
-      "1          Saudi Arabia   West            3247          38964       1.0   \n",
-      "2          Saudi Arabia   West            2506          30072       2.0   \n",
-      "3  United Arab Emirates   Main            1828          21936       3.0   \n",
-      "4                 Egypt   Main             970          11640       5.0   \n",
-      "\n",
-      "   Sick Leaves  Unpaid Leaves  Overtime Hours  \n",
-      "0            1              0             183  \n",
-      "1            0              5             198  \n",
-      "2            0              3             192  \n",
-      "3            0              0               7  \n",
-      "4            0              5             121  \n"
+      "Hello, Rishav\n",
+      "7\n",
+      "0\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "def greet(name=\"world\"):\n",
+    "    print(f\"Hello, {name}\")\n",
     "\n",
-    "employees = pd.read_csv(\"Employees.csv\")\n",
+    "greet(\"Rishav\")\n",
     "\n",
-    "print(employees.head())"
+    "def sum(a=0, b=0):\n",
+    "    return a+b\n",
+    "\n",
+    "print(sum(3, 4))\n",
+    "print(sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "'*args' is used to pass a variable number of positional arguments, while '**kwargs' is used to pass a variable  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2\n",
+      "(3, 4, 5, 6, 7)\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add(a,b,*args):\n",
+    "    print(a,b)\n",
+    "    print(args)\n",
+    "\n",
+    "a = add(1, 2, 3, 4, 5, 6, 7)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_even_number(number)->bool:\n",
+    "    if number %2==0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "check_number = is_even_number(5)\n",
+    "print(check_number)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question\n",
+    "Write a function that accepts three values (Arguments) x,y,operation where x => int, operation => string (+, -, *, /)\n",
+    "function should return output based on the operation that is if operation = +"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "division by zero\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def simpleCalculator(x:int, y:int, op:str):\n",
+    "    if op == \"+\":\n",
+    "        return x + y\n",
+    "    elif op == \"-\":\n",
+    "        return x - y\n",
+    "    elif op == \"*\":\n",
+    "        return x * y\n",
+    "    elif op == \"/\":\n",
+    "        try:\n",
+    "            return x/y\n",
+    "        except ZeroDivisionError as e:\n",
+    "            print(e)\n",
+    "            return None\n",
+    "    else:\n",
+    "        return \"The function does not have support given sign\"\n",
+    "\n",
+    "print(simpleCalculator(4, 0, \"/\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lambda Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "area_of_rectangle = lambda x,y: 2 * (x*y)\n",
+    "\n",
+    "print(area_of_rectangle(2, 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercises(Day 2):\n",
+    "\n",
+    "- Write a function Swap Two numbers without using a temporary variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def swap(a:int,b:int):\n",
+    "    a = a + b\n",
+    "    b = a - b\n",
+    "    a = a - b\n",
+    "    return (a, b)\n",
+    "\n",
+    "print(swap(2, 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Write a function to determine if a string is a palindrome (palindrome is if we reverse it has same value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vahsir\n",
+      "vav\n",
+      "True\n",
+      "rar\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# we can do the reverse by text[::-1]\n",
+    "text = \"rishav\"\n",
+    "text_reversed = text[::-1]\n",
+    "print(text_reversed)\n",
+    "\n",
+    "def palindrome_string(a:str):\n",
+    "    if a == a[::-1]:\n",
+    "        print(a[::-1])\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "print(palindrome_string(\"vav\"))\n",
+    "\n",
+    "# Task: do it with loop\n",
+    "\n",
+    "def loop_palindrome_string(a:str):\n",
+    "    a_length = len(a)\n",
+    "    reversed = \"\"\n",
+    "    while a_length > 0:\n",
+    "        reversed += a[a_length-1]\n",
+    "        a_length = a_length - 1\n",
+    "    print(reversed)\n",
+    "    \n",
+    "    if a == reversed:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "print(loop_palindrome_string(\"rar\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-  Write a function to count the number of vowels in a given string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def vowel_counting(a:str):\n",
+    "    vowels = [\"a\", \"e\", \"i\", \"o\", \"u\"]\n",
+    "    count = 0\n",
+    "    for i in a:\n",
+    "        if i.lower() in vowels:\n",
+    "            count += 1\n",
+    "    return count\n",
+    "\n",
+    "print(vowel_counting(\"Rishav\"))"
    ]
   }
  ],
