--- a/week3.ipynb
+++ b/week3.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "schools = pd.read_csv('schools.csv')\n",
+    "schools = pd.read_csv('data/schools.csv')\n",
     "\n",
     "print(schools.head())"
    ]
