week4,day4, commit

--- a/week4.ipynb
+++ b/week4.ipynb
@@ -1977,6 +1977,13 @@
     "df_interpolated = weight_height.interpolate()\n",
     "weight_height.fillna(df_interpolated)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data normalization and Numpy"
+   ]
   }
  ],
  "metadata": {
