--- a/week5.ipynb
+++ b/week5.ipynb
@@ -332,6 +332,138 @@
     "print(f\"numpy power using second_array: {np.power(first_array, second_array)}\")\n",
     "print(f\"numpy modulus using second power: {np.mod(first_array, second_array)}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Numpy Broadcasting\n",
+    "- Broadcasting in Numpy allows it to perform arithmetic operations on arrays with different shapes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "broadcast_array: [1 4 2 5 9]\n",
+      "broadcast_array2: 4\n",
+      "This is element wise multiplication(not a matrix multiplication): [ 4 16  8 20 36]\n"
+     ]
+    }
+   ],
+   "source": [
+    "broadcast_array = np.array([1, 4, 2, 5, 9])\n",
+    "broadcast_array2 = np.array(4)\n",
+    "\n",
+    "print(f\"broadcast_array: {broadcast_array}\")\n",
+    "print(f\"broadcast_array2: {broadcast_array2}\")\n",
+    "# multiply\n",
+    "multiply = np.multiply(broadcast_array, broadcast_array2)\n",
+    "print(f\"This is element wise multiplication(not a matrix multiplication): {multiply}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Numpy Array Functions\n",
+    "Numpy has various built-in functions for various purposes:\n",
+    "- Array Creation Functions: ```np.array(), np.zeros(), np.ones(), np.empty()```\n",
+    "- Manipulation functions: ```np.reshape(), np.transpose()```\n",
+    "- Mathematical Functions: ```np.add(), np.substract(), np.sqrt(), np.power()```\n",
+    "- Statistical Functions: ```np.median(), np.mean(), np.std(), np.var()```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 3 4 5 2 5]\n",
+      "[[1 3 4]\n",
+      " [5 2 5]]\n",
+      "mean: 3.3333333333333335\n",
+      "median: 3.5\n",
+      "transposing using data2: [[1 5]\n",
+      " [3 2]\n",
+      " [4 5]]\n",
+      "standard deviation: 1.4907119849998598\n",
+      "var usage: 2.2222222222222223\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = np.array([1, 3, 4, 5, 2, 5])\n",
+    "data2 = data.reshape(2,3)\n",
+    "print(data)\n",
+    "print(data2)\n",
+    "\n",
+    "print(f\"mean: {np.mean(data)}\")\n",
+    "print(f\"median: {np.median(data)}\")\n",
+    "print(f\"transposing using data2: {np.transpose(data2)}\")\n",
+    "print(f\"standard deviation: {np.std(data)}\")\n",
+    "print(f\"var usage: {np.var(data)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Numpy Matrix Operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix Multiplication: [[ 22  38  60]\n",
+      " [ 24  47  64]\n",
+      " [ 40  73 112]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numpy_3d_array = np.array([\n",
+    "    [\n",
+    "    [1, 2, 4], [7, 3, 9],\n",
+    "    ],\n",
+    "    [\n",
+    "        [3, 8, 3], [3, 1, 4]\n",
+    "    ],\n",
+    "    [\n",
+    "        [3, 5, 7], [4, 8, 6]\n",
+    "    ]\n",
+    "])\n",
+    "\n",
+    "numpy_first_array = np.array([\n",
+    "    [1, 3, 4],\n",
+    "    [5, 3, 1],\n",
+    "    [3, 5, 7]\n",
+    "])\n",
+    "\n",
+    "numpy_second_array = np.array([\n",
+    "    [2, 6, 7],\n",
+    "    [4, 4, 7],\n",
+    "    [2, 5, 8]\n",
+    "])\n",
+    "\n",
+    "print(f\"Matrix Multiplication: {np.matmul(numpy_first_array, numpy_second_array)}\")"
+   ]
   }
  ],
  "metadata": {
