week5,day3,commit

--- a/week5.ipynb
+++ b/week5.ipynb
@@ -636,13 +636,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1\n",
+      "['where', 'are', 'you']\n",
+      "[0.36620409622270317, 0.36620409622270317, 0.36620409622270317]\n",
+      "[0.36620409622270317, 0.36620409622270317, 0.36620409622270317]\n",
       "1.0\n"
      ]
     }
@@ -663,17 +667,30 @@
     "# if a word appears in only one or a few documents, its IDF will be higher.\n",
     "# combining  TF and IDF gives score that reflects how important a word in a sentence/document relative to the entire corpus\n",
     "\n",
+    "print(sentence1.count(\"where\"))\n",
+    "print(sentence1.split())\n",
+    "\n",
     "def tf_idf_vectorizer(word, sentence):\n",
+    "    # tf is the count of a single similar word is divided by the length of sentence(in word)in an array.\n",
+    "    # here, if there is \"where\"  1 times, then, 1 /3 is the term frequency(tf)\n",
     "    tf = sentence.count(word) /len(sentence.split())\n",
     "\n",
+    "    # total_doc_size is 2, because 2 sentence are used\n",
     "    total_doc_size = 2\n",
+    "    # so, log(2 / ((1 if the word is in sentence1, and 0 if not) +(1 if the word is in sentence2, and 0 if not))\n",
+    "    # so, where is in sentence1 but not in sentence1, so log(1/(1+0)) = value\n",
+    "    # This value is multiplied by term frequency\n",
     "    idf = np.log1p(total_doc_size / (1 if word in sentence1 else 0 + 1 if word in sentence2 else 0))\n",
     "    return tf * idf\n",
     "\n",
-    "\n",
+    "# here, in each iterations in list of word in sentence, word is changed, and function is called to know the value, which is stored in list\n",
     "vec1 = [tf_idf_vectorizer(word,sentence1) for word in sentence1.split()]\n",
     "vec2 = [tf_idf_vectorizer(word,sentence2) for word in sentence2.split()]\n",
+    "print(vec1) # here, are the list\n",
+    "print(vec2)\n",
     "\n",
+    "# Now, similarity is found out using dotproduct, since thita angle represent similarity\n",
+    "# lesser the thita, more the similarity\n",
     "similarity = np.dot(vec1, vec2) / (np.linalg.norm(vec1) * np.linalg.norm(vec2))\n",
     "print(similarity)\n"
    ]
@@ -701,13 +718,6 @@
     "To find m and c,\n",
     "see direct formula for m and direct formula for c"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
