--- a/week6-IO-Operations.ipynb
+++ b/week6-IO-Operations.ipynb
@@ -4,6 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Week 6 Assignments\n",
+    "\n",
+    "Rishav Chaudhary\n",
+    "\n",
+    "Presidential Graduate School, Kathmandu, Nepal\n",
+    "\n",
+    "PRG 330: Python Programming for data\n",
+    "\n",
+    "Prof. Tek Raj Panta\n",
+    "\n",
+    "December 1, 2024"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# I/O Operations\n",
     "\n",
     "## Open a file from filesystems\n",
@@ -20,25 +37,22 @@
     "- ``t`` : Text mode (Default)\n",
     "- ``+`` : Update mode (read and write)\n",
     "\n",
-    "### Read atext file and assign the content to a python variable"
+    "### Reading a text file and assign the content to a python variable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sun dipped below the horizon, casting a golden glow across the sky. Birds fluttered about, returning to their nests as the world began to settle into twilight. It was a moment of calm before the night would fully take over.\n",
-      "\n",
-      "In the heart of the bustling city, people rushed from one place to another, each focused on their own tasks. Some carried briefcases, while others clutched shopping bags filled with the day's purchases. Despite the crowd, each person was immersed in their own thoughts, unaware of the lives they passed.\n",
-      "\n",
-      "Sometimes, life seems like a series of fleeting moments, each one moving too quickly to fully grasp. Yet, within these moments, there are stories waiting to be discovered. A quiet conversation over coffee, a friendly smile exchanged on the street, or the simple act of pausing to watch a sunset – these moments hold a beauty of their own.\n",
-      "\n",
-      "It is easy to get caught up in the rush, but there is value in taking the time to appreciate the little things. Slowing down, if only for a moment, can make all the difference. It’s in these pauses that we find clarity, peace, and the reminder that life is happening right now.\n",
+      "1. The sun dipped below the horizon, casting a golden glow across the sky. Birds fluttered about, returning to their nests as the world began to settle into twilight. It was a moment of calm before the night would fully take over.\n",
+      "2. In the heart of the bustling city, people rushed from one place to another, each focused on their own tasks. Some carried briefcases, while others clutched shopping bags filled with the day's purchases. Despite the crowd, each person was immersed in their own thoughts, unaware of the lives they passed.\n",
+      "3. Sometimes, life seems like a series of fleeting moments, each one moving too quickly to fully grasp. Yet, within these moments, there are stories waiting to be discovered. A quiet conversation over coffee, a friendly smile exchanged on the street, or the simple act of pausing to watch a sunset – these moments hold a beauty of their own.\n",
+      "4. It is easy to get caught up in the rush, but there is value in taking the time to appreciate the little things. Slowing down, if only for a moment, can make all the difference. It’s in these pauses that we find clarity, peace, and the reminder that life is happening right now.\n",
       "\n"
      ]
     }
@@ -59,35 +73,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (3880233835.py, line 16)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[15], line 16\u001b[0;36m\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading text content line by line using nextline() and while loop\n",
+      "\n",
+      "1. The sun dipped below the horizon, casting a golden glow across the sky. Birds fluttered about, returning to their nests as the world began to settle into twilight. It was a moment of calm before the night would fully take over.\n",
+      "2. In the heart of the bustling city, people rushed from one place to another, each focused on their own tasks. Some carried briefcases, while others clutched shopping bags filled with the day's purchases. Despite the crowd, each person was immersed in their own thoughts, unaware of the lives they passed.\n",
+      "3. Sometimes, life seems like a series of fleeting moments, each one moving too quickly to fully grasp. Yet, within these moments, there are stories waiting to be discovered. A quiet conversation over coffee, a friendly smile exchanged on the street, or the simple act of pausing to watch a sunset – these moments hold a beauty of their own.\n",
+      "4. It is easy to get caught up in the rush, but there is value in taking the time to appreciate the little things. Slowing down, if only for a moment, can make all the difference. It’s in these pauses that we find clarity, peace, and the reminder that life is happening right now.\n",
+      "\n",
+      "Using for loop: \n",
+      "\n",
+      "1. The sun dipped below the horizon, casting a golden glow across the sky. Birds fluttered about, returning to their nests as the world began to settle into twilight. It was a moment of calm before the night would fully take over.\n",
+      "2. In the heart of the bustling city, people rushed from one place to another, each focused on their own tasks. Some carried briefcases, while others clutched shopping bags filled with the day's purchases. Despite the crowd, each person was immersed in their own thoughts, unaware of the lives they passed.\n",
+      "3. Sometimes, life seems like a series of fleeting moments, each one moving too quickly to fully grasp. Yet, within these moments, there are stories waiting to be discovered. A quiet conversation over coffee, a friendly smile exchanged on the street, or the simple act of pausing to watch a sunset – these moments hold a beauty of their own.\n",
+      "4. It is easy to get caught up in the rush, but there is value in taking the time to appreciate the little things. Slowing down, if only for a moment, can make all the difference. It’s in these pauses that we find clarity, peace, and the reminder that life is happening right now.\n",
+      "\n",
+      "Get all lines in a list using readline() \n",
+      "\n",
+      "1. The sun dipped below the horizon, casting a golden glow across the sky. Birds fluttered about, returning to their nests as the world began to settle into twilight. It was a moment of calm before the night would fully take over.\n",
+      "2. In the heart of the bustling city, people rushed from one place to another, each focused on their own tasks. Some carried briefcases, while others clutched shopping bags filled with the day's purchases. Despite the crowd, each person was immersed in their own thoughts, unaware of the lives they passed.\n",
+      "3. Sometimes, life seems like a series of fleeting moments, each one moving too quickly to fully grasp. Yet, within these moments, there are stories waiting to be discovered. A quiet conversation over coffee, a friendly smile exchanged on the street, or the simple act of pausing to watch a sunset – these moments hold a beauty of their own.\n",
+      "4. It is easy to get caught up in the rush, but there is value in taking the time to appreciate the little things. Slowing down, if only for a moment, can make all the difference. It’s in these pauses that we find clarity, peace, and the reminder that life is happening right now.\n"
      ]
     }
    ],
    "source": [
     "# read text content line by line using nextline() and while loop\n",
+    "print(\"Reading text content line by line using nextline() and while loop\\n\")\n",
     "with open(\"data/test.txt\", \"r\") as text_file:\n",
     "    line = text_file.readline() # read the next line\n",
     "    while line: # As long as there is a line\n",
     "        print(line, end=\"\")\n",
     "        line = text_file.readline() # Read the next line\n",
+    "print(\"\") # For readability of ouput\n",
     "\n",
-    "print(\"Using loop: \\n\")\n",
+    "print(\"Using for loop: \\n\")\n",
     "# Using for loop\n",
     "with open(\"data/test.txt\", \"r\") as text_file:\n",
     "    for line in text_file:\n",
     "        print(line, end=\"\")\n",
+    "print(\"\") # For readability of output\n",
     "\n",
     "# get all lines in a list using readline()\n",
+    "print(\"Get all lines in a list using readline() \\n\")\n",
     "with open(\"data/test.txt\", \"r\") as text_file:\n",
-    "    "
+    "    lines = text_file.readlines()  # Read all lines and store them in a list\n",
+    "    for line in lines:\n",
+    "        print(line, end=\"\")  # Print each line from the list\n"
    ]
   },
   {
@@ -111,6 +149,7 @@
     "with open(\"data/new_test_1.txt\", \"w\") as new_file:\n",
     "    new_file.writelines([\"Hello\\n\", \"world\\n\"])\n",
     "\n",
+    "# This code appends or writes at the end of the code \n",
     "with open(\"data/new_test_1.txt\", \"a\") as file:\n",
     "    file.write(\"This should append on new_test_1.txt\")"
    ]
@@ -145,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +194,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mFileExistsError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[22], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmkdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdir_one\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# making directory in current folder\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[10], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmkdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdir_one\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# making directory in current folder\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Since, the dir_one was already created, it resulted in error\u001b[39;00m\n",
       "\u001b[0;31mFileExistsError\u001b[0m: [Errno 17] File exists: 'dir_one'"
      ]
     }
@@ -163,23 +202,46 @@
    "source": [
     "import os\n",
     "\n",
-    "os.mkdir(\"dir_one\") # making directory in current folder"
+    "os.mkdir(\"dir_one\") # making directory in current folder\n",
+    "\n",
+    "# Since, the dir_one was already created, it resulted in error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: The directory already exists\n"
+     ]
+    }
+   ],
+   "source": [
+    "# implemeting try except to solve this problem\n",
+    "try:\n",
+    "    os.mkdir(\"dir_one\")\n",
+    "except FileExistsError:\n",
+    "    print(f\"Error: The directory already exists\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### making directory inside a directory"
+    "#### Making directory inside a directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# making directory inside dir_one\n",
+    "# making a parent directory dir-two and inside it creating a children directory \n",
     "os.makedirs(\"dir-two/dir-two_1\")"
    ]
   },
