--- a/week7.ipynb
+++ b/week7.ipynb
@@ -206,6 +206,204 @@
    "source": [
     "!python -m cProfile main.py"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3628800\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "from collections import deque, Counter\n",
+    "\n",
+    "# Custom implementation\n",
+    "def custom_sqrt(x):\n",
+    "    return x ** 0.5\n",
+    "\n",
+    "# Optimized using math.sqrt()\n",
+    "def optimized_sqrt(x):\n",
+    "    return math.sqrt(x)\n",
+    "\n",
+    "# Custom factorial\n",
+    "def custom_factorial(n):\n",
+    "    result = 1\n",
+    "    for i in range(1, n+1):\n",
+    "        result *= i\n",
+    "    return result\n",
+    "\n",
+    "# Optimized using math.factorial()\n",
+    "print(math.factorial(10))\n",
+    "\n",
+    "# collection\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Homework\n",
+    "\n",
+    "- Explore itertools for memory efficient iteration tasks\n",
+    "\n",
+    "### Profiling within the Script\n",
+    "- LRU (least recently used)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12586269025\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import lru_cache\n",
+    "\n",
+    "@lru_cache(maxsize=None) # Cache all results\n",
+    "def fibonacci(n):\n",
+    "    if n < 2:\n",
+    "        return n\n",
+    "    return fibonacci(n - 1) + fibonacci(n - 2)\n",
+    "\n",
+    "print(fibonacci(50))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reference Counting\n",
+    "- In Python, reference counting is used to track how many references exist for each object in memory\n",
+    "- The reference count is managed by by Python's memory management system.\n",
+    "- **sys.getrefcount()**  to count the reference of an object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reference count for 'a': 2\n",
+      "Reference count for 'a' after assigning b = a: 3\n",
+      "Reference count for 'b': 3\n",
+      "Reference count for 'a' after assigning c = b: 4\n",
+      "Reference count for 'b' after assigning c = b: 4\n",
+      "Reference count for 'c': 4\n",
+      "Reference count for 'a' after deleting 'b': 3\n",
+      "Reference count for 'a' after deleting 'c': 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "def reference_count_example():\n",
+    "    a = []  \n",
+    "    print(f\"Reference count for 'a': {sys.getrefcount(a)}\")\n",
+    "\n",
+    "    b = a  # 'b' references the same list object\n",
+    "    print(f\"Reference count for 'a' after assigning b = a: {sys.getrefcount(a)}\")\n",
+    "    print(f\"Reference count for 'b': {sys.getrefcount(b)}\")\n",
+    "\n",
+    "    c = b  # 'c' references the same list object\n",
+    "    print(f\"Reference count for 'a' after assigning c = b: {sys.getrefcount(a)}\")\n",
+    "    print(f\"Reference count for 'b' after assigning c = b: {sys.getrefcount(b)}\")\n",
+    "    print(f\"Reference count for 'c': {sys.getrefcount(c)}\")\n",
+    "\n",
+    "    # Now, deleting the references\n",
+    "    del b\n",
+    "    print(f\"Reference count for 'a' after deleting 'b': {sys.getrefcount(a)}\")\n",
+    "\n",
+    "    del c\n",
+    "    print(f\"Reference count for 'a' after deleting 'c': {sys.getrefcount(a)}\")\n",
+    "\n",
+    "reference_count_example()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Global Interpreter Lock (GIL)\n",
+    "\n",
+    "GIL limits multi-threaded performance in CPU-bound tasks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running with Threads:\n",
+      "Sum of squares up to 10000000: 333333283333335000000Sum of squares up to 10000000: 333333283333335000000\n",
+      "\n",
+      "Time taken (threads): 2.51 seconds\n",
+      "\n",
+      "Running Single-Threaded:\n",
+      "Sum of squares up to 10000000: 333333283333335000000\n",
+      "Sum of squares up to 10000000: 333333283333335000000\n",
+      "Time taken (single thread): 2.48 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "import threading\n",
+    "import time\n",
+    "\n",
+    "def sum_of_squares(n):\n",
+    "    total = sum(i * i for i in range(n))\n",
+    "    print(f\"Sum of squares up to {n}: {total}\")\n",
+    "\n",
+    "# Measure time for multi-threaded execution\n",
+    "def threaded_execution():\n",
+    "    threads = []\n",
+    "    start_time = time.time()\n",
+    "    # Create threads\n",
+    "    for _ in range(2):\n",
+    "        t = threading.Thread(target=sum_of_squares, args=(10_000_000,))\n",
+    "        threads.append(t)\n",
+    "        t.start()\n",
+    "    \n",
+    "    # Wait for all threads to complete\n",
+    "    for t in threads:\n",
+    "        t.join()\n",
+    "\n",
+    "    print(f\"Time taken (threads): {time.time() - start_time:.2f} seconds\")\n",
+    "\n",
+    "# Measure time for single-threaded execution\n",
+    "def single_threaded_execution():\n",
+    "    start_time = time.time()\n",
+    "    sum_of_squares(10_000_000)\n",
+    "    sum_of_squares(10_000_000)\n",
+    "    print(f\"Time taken (single thread): {time.time() - start_time:.2f} seconds\")\n",
+    "\n",
+    "print(\"Running with Threads:\")\n",
+    "threaded_execution()\n",
+    "print(\"\\nRunning Single-Threaded:\")\n",
+    "single_threaded_execution()"
+   ]
   }
  ],
  "metadata": {
