--- a/week7.ipynb
+++ b/week7.ipynb
@@ -4,12 +4,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Memoization/dynamic programming Example"
+    "# Python Performance Tuning and Optimization\n",
+    "\n",
+    "## Key Areas of Optimization\n",
+    "\n",
+    "- Algorithmic Optimization\n",
+    "- Data Structure Selection\n",
+    "- Code Profiling and Analysis\n",
+    "- Memory Management\n",
+    "- Concurrency and Parallelism\n",
+    "- Using Built-in Libraries\n",
+    "\n",
+    "### Algorithmic Optimization\n",
+    "- Algorithmic optimization is the process of improving the efficiency of algorithms\n",
+    "- Algorithmic optimization is used to reduce both the time complexity (execution time) or space complexity (memory usage())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Memoization/dynamic programming Example"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibonacci_recursive(n):\n",
+    "    if n <= 1:\n",
+    "        return n\n",
+    "    return fibonacci_recursive(n - 1) + fibonacci_recursive(n - 2)\n",
+    "\n",
+    "print(fibonacci_recursive(5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is an inefficint way because to calculate fibonacci_recursive(5), the function calculated f(3) and f(4) but f(3) is recalulcalated inside f(4). Here, same values are calculated multiple times, wasting time. \n",
+    "\n",
+    "**Time complexity:** O(2^n), which is exponential (very slow for large n)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Optimized Solution 1: Memoization\n",
+    "\n",
+    "To avoid recalculating values, we can remember previously computed Fibonacci numbers using a dictionary(called a \"memo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "354224848179261915075\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibonacci_memoization(n, memo={}):\n",
+    "    if n in memo: # Checking if value is already calculated\n",
+    "        return memo[n]\n",
+    "    if n <= 1:\n",
+    "        memo[n] = n\n",
+    "    else:\n",
+    "        memo[n] = fibonacci_memoization(n-1, memo) + fibonacci_memoization(n-2, memo)\n",
+    "    return memo[n]\n",
+    "\n",
+    "print(fibonacci_memoization(100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, the function is storing each fibonacci number in a ``memo`` dictionary and when it needs a fibonacci number, it checks the dictionary first. There is no redundant calculations because results are reused."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -120,6 +213,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Use Dict/Set (Hashmaps) to optimize the search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Linear Search\n",
+    "def linear_search(arr, target):\n",
+    "    for i in range(len(arr)):\n",
+    "        if arr[i] == target:\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "arr = [5, 2, 9, 1, 5, 6]\n",
+    "print(linear_search(arr, 5)) # Checking 5 is in given array or not\n",
+    "\n",
+    "# Use Set to optimize the search O(1)\n",
+    "def optimized_search(arr, target):\n",
+    "    hash_set = set(arr)\n",
+    "    return target in hash_set\n",
+    "\n",
+    "arr = [5, 2, 9, 1, 5, 6]\n",
+    "print(optimized_search(arr, 5)) # (O(1)) average\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Data Structure Selection"
    ]
   },
@@ -167,7 +301,60 @@
     "    - Write a function so that from a given list of length n, if an element exists on the list return True, else False\n",
     "- Queue-based Problems\n",
     "    - FIFO and LIFO (use **deque** from the **collection**)\n",
-    "    - Task: Simulate "
+    "    - Task: Simulate FIFO and LIFO Queue with list and with deque and profile the time complexity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_1 = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "def search_element_in_list_using_dict(list, element):\n",
+    "    # converting the list to dictinary for optimized search\n",
+    "    element_dict = {item: True for item in list} # element_dict ={1:True, 2:True, 3:True, 4:True, 5:True}\n",
+    "    # search for the element in the dictionary keys\n",
+    "    return element in element_dict\n",
+    "\n",
+    "print(search_element_in_list_using_dict(list_1, 3))\n",
+    "print(search_element_in_list_using_dict(list_1, 9))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "import time\n",
+    "\n",
+    "# FIFO Simulation (Queue)\n",
+    "def fifo_with_list(elements):\n",
+    "    queue = []\n",
+    "    for el in elements:\n",
+    "        queue.append(el)\n",
+    "    while queue:\n",
+    "        queue.pop(0)\n",
+    "\n",
+    "def fifo_with_deque(elements):\n",
+    "    queue = deque() # using deque\n",
+    "    for el in elements:\n",
+    "        queue.append(el)\n",
+    "    while queue;\n",
+    "        queue.popleft()\n",
+    "        "
    ]
   },
   {
@@ -180,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
