--- a/week8_rishav_chaudhary_assignment.ipynb
+++ b/week8_rishav_chaudhary_assignment.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "Professor Tek Raj Panta\n",
     "\n",
-    "December 11, 2024"
+    "December 13, 2024"
    ]
   },
   {
@@ -1122,6 +1122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Explanation\n",
     "This model performed perfectly with no errors indicating the overfitting of the data, and the model is too closely aligned with the training data."
    ]
   },
@@ -1165,6 +1166,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Explanation\n",
+    "The Random Forest Model demonstrated excellent performance in predicting the target variable. Mean Absolute Error is only 0.0572 indicating average absolute difference between predicted and actual values which is small. The Root Mean Squared Error is 0.1326 highlighting the model's accuracy. This means there is minimal deviation in the predictions. And, the R2 score is 0.9984 suggested the model had 99.84% of the variance in the data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Gradient Boost Regressor\n"
    ]
   },
@@ -1195,6 +1204,14 @@
     "print(f\"Mean Absolute Error: {mae_gb:.4f}\")\n",
     "print(f\"RMSE: {rmse_gb:.4f}\")\n",
     "print(f\"R²: {r2_gb:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Explanation\n",
+    "The gradient boosting model exhibited a exceptional performance, with a mean absolute error of 0.0013 which indicates that the average absoulte difference between predicted and actual values are extremely small. The Root Mean Squared Error of 0.0029 which reflected further accuracy. There is 100% variance in data. Well, it seems the value are overfitted."
    ]
   }
  ],
